--- a/_posts/2022-04-02-cos-part1.md
+++ b/_posts/2022-04-02-cos-part1.md
@@ -1,3 +1,9 @@
+---
+layout: default
+title: Curse of Strahd kampányösszegzés – 1. rész 
+comments: true
+---
+
 # Curse of Strahd kampányösszegzés – 1. rész
 
 2021 decemberében fejeztük be a csapatommal a _Curse of Strahd_ kampányt. Azóta 
