--- a/_posts/2022-04-02-cos-part1.md
+++ b/_posts/2022-04-02-cos-part1.md
@@ -13,7 +13,7 @@ kapcsolatban. Azt remélem, hogy ezek talán másoknak is – akik még csupán
 tervezik, hogy levezényeljék a kampányt – a hasznukra válhatnak és persze 
 az összefoglalásra, lezárásra való igényem is dolgozik bennem.
 
-![CoS](assets/cos.jpeg)
+![CoS](/assets/cos.jpeg)
 
 ## Statisztika és technikai infók...
 
