--- a/_posts/2022-05-16-cos-part2.md
+++ b/_posts/2022-05-16-cos-part2.md
@@ -44,14 +44,14 @@ csapat első jelentős találkozása a gróffal, érdemes megtervezni és ehhez 
 fogódzót ad a kampány (helyesebben: ami fogódzót ad, azt nem érdemes 
 felhasználni).
 
-![CoS](/assets/cos2.jpeg)
+![CoS - wolves](/assets/cos2.jpeg)
 
 Ennél kevésbé jelentős probléma a könyv fejezeteinek sorrendje. Valamilyen oknál 
 fogva a kötet negyedik fejezete tartalmazza Ravenloft Kastélyának leírását, 
 amelyre jó eséllyel komolyabban csupán a kampány végén lesz szükség. Szóval 
 minden egyes alkalommal ha egy helyszín leírását akarja az olvasó ellenőrizni – 
 Barovia faluját kivéve, mert az a kastély leírása előtt kapott helyet – át kell 
-lapzza a kötet leghosszabb fejezetét. Ez szőrszálhasogatásnak tűnhet, de ha 
+lapozza a kötet leghosszabb fejezetét. Ez szőrszálhasogatásnak tűnhet, de ha 
 figyelembe vesszük, hogy egy kampány alatt hány alkalommal kell fellapozni 
 információért a kötetet, akkor talán érthetőbb a panasz. Én végül apró 
 ragasztócsíkokkal jelöltem meg az egyes fejezeteket, hogy könnyebb legyen a 
@@ -65,6 +65,7 @@ Ehhez viszont legalább annyira kellettek a már említett közösségi anyagok,
 amennyire szükséges maga a kampánykönyv. A legfontosabb anyagokat linkelem be, 
 ezeken keresztül sok egyéb forrás is megtalálható.
 
+* [Magyar Curse of Strahd Mesélői csoport a Facebookon](https://www.facebook.com/groups/2350552825206728)
 * [A Curse of Strahd subreddit](https://www.reddit.com/r/CurseofStrahd/)
 * [DragnaCarta CoS:Reloaded anyagai](https://www.reddit.com/r/CurseofStrahd/comments/9bpzbh/curse_of_strahd_reloaded_compilation_thread/)
 * [MandyMod Fleshing Out CoS sorozata](https://www.reddit.com/r/CurseofStrahd/comments/9pbka6/fleshing_out_curse_of_strahd_master_table_of/)
