--- a/_posts/2022-05-09-cos-part1.md
+++ b/_posts/2022-05-09-cos-part1.md
@@ -13,7 +13,7 @@ kapcsolatban. Azt remélem, hogy ezek talán másoknak is – akik még csupán
 tervezik, hogy levezényeljék a kampányt – a hasznukra válhatnak és persze 
 az összefoglalásra, lezárásra való igényem is dolgozik bennem.
 
-![CoS](/assets/cos.jpg)
+![CoS - books](/assets/cos1.jpg)
 
 ## Statisztika és technikai infók...
 
