--- a/_posts/2022-06-06-loot-01.md
+++ b/_posts/2022-06-06-loot-01.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: Loot #1. – Weis & Hickman: The Annotated Chronicles
+title: Loot #1. – Weis, Hickman: The Annotated Chronicles
 comments: true
 ---
 
-# Loot #1. – Weis & Hickman: The Annotated Chronicles
+# Loot #1. – Weis, Hickman: The Annotated Chronicles
 
 (A _Loot_ egy olyan sorozat, ahol a gyűjteményem új darabjait mutatom be 
 hozzájuk fűzött kommentárok kíséretében.)
@@ -48,16 +48,17 @@ trilógia a szerzők jegyzeteivel ellátott kiadása viszont olyasmi, amit mindi
 szerettem volna a gyűjteményemben tudni (ki tudja, hátha egyszer végigolvasom 
 a sorozatot).
 
-<img src="/assets/DLAC 01.jpeg" alt="drawing" width=50% height=50% />
+![Borító](/assets/DLAC01.jpeg){:width="700px"}
 
 A kötet masszív darab, a maga 1312 oldalával. Használtan jutottam hozzá, ez a 
 borító állapotán sajnos látszik is. Ennek ellenére nagy örömmel böngésztem át. A 
 térképeken kívül fekete-fehér grafikákat, és néhány teljes oldalas színes képet 
 is tartalmaz.
 
-<img src="/assets/DLAC 02.jpeg" alt="drawing" width=50% height=50% />
+![Széljegyzet](/assets/DLAC02.jpeg){:width="700px"}
 
-<img src="/assets/DLAC 03.jpeg" alt="drawing" width=50% height=50% />
+
+![Címoldal](/assets/DLAC03.jpeg){:width="700px"}
 
 <details>
  <summary>Bibliográfiai adatok</summary>
