Fixes image extensions.

--- a/_posts/2022-08-29-haz-2022.md
+++ b/_posts/2022-08-29-haz-2022.md
@@ -17,7 +17,7 @@ játékot terveztünk be. Tavaly ez egy Symbaroum modul volt (az alapkönyvben
 publikált), melyet nem tudtunk a HÁZ alatt befejezni, de később pontot tettünk a 
 végére online.
 
-![A HÁZ 2022](/assets/HAZ22-01.jpeg)
+![A HÁZ 2022](/assets/HAZ22-01.jpg)
 
 A módszerünk egyébként az, hogy mindenki bedobja a közösbe, hogy mit tudna 
 mesélni, aztán egyszerű többséggel megszavazzuk, hogy melyik játékot játsszuk 
@@ -42,7 +42,7 @@ származtak a játékos karakterek is (nem mellékesen négy játékos volt, ami
 ideális szám asztal mellett: a már említett Gabesz, a testvére Zoli, a szintén 
 régi motoros és rengeteg rendszerben megfordult Doma Zoli, meg én).
 
-![A HÁZ 2022 - asztalkép](/assets/HAZ22-02.jpeg)
+![A HÁZ 2022 - asztalkép](/assets/HAZ22-02.jpg)
 
 Pisti is az a fajta mesélő, aki nem csak hangulatban megfelelő aláfestőzenét 
 használ a játék alatt, de arra is figyel, hogy azt a jelenetekhez igazítsa. Ez 
